fix: CORS, swagger auth
