# gateway/gatewayapi.go
@@ -23,7 +23,11 @@ func main() {
 	var c config.Config
 	conf.MustLoad(*configFile, &c)
 
-	server := rest.MustNewServer(c.RestConf)
+	server := rest.MustNewServer(
+		c.RestConf,
+		rest.WithCors(),
+		rest.WithCorsHeaders("Authorization", "Content-Type", "X-Requested-With"),
+	)
 	defer server.Stop()
 
 	ctx := svc.NewServiceContext(c)
