# gateway/swagger.json
@@ -25,8 +25,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "CancelEnroll",
         "operationId": "cancelEnroll",
         "parameters": [
@@ -62,7 +62,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/checkIn": {
@@ -74,8 +82,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "CheckIn",
         "operationId": "checkIn",
         "parameters": [
@@ -114,7 +122,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/create": {
@@ -126,8 +142,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "CreateActivity",
         "operationId": "createActivity",
         "parameters": [
@@ -239,7 +255,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/detail": {
@@ -248,8 +272,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetActivityDetail",
         "operationId": "getActivityDetail",
         "parameters": [
@@ -332,7 +356,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/enroll": {
@@ -344,8 +376,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "EnrollActivity",
         "operationId": "enrollActivity",
         "parameters": [
@@ -381,7 +413,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/enrolled": {
@@ -390,8 +430,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetEnrolledActivities",
         "operationId": "getEnrolledActivities",
         "parameters": [
@@ -486,7 +526,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/list": {
@@ -495,8 +543,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetActivityList",
         "operationId": "getActivityList",
         "parameters": [
@@ -603,7 +651,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/my": {
@@ -612,8 +668,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetMyActivities",
         "operationId": "getMyActivities",
         "parameters": [
@@ -708,7 +764,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/participants": {
@@ -717,8 +781,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetParticipants",
         "operationId": "getParticipants",
         "parameters": [
@@ -795,7 +859,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/activity/public/detail": {
@@ -804,8 +876,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetPublicActivityDetail",
         "operationId": "getPublicActivityDetail",
         "parameters": [
@@ -888,7 +960,10 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ]
       }
     },
     "/activity/public/list": {
@@ -897,8 +972,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetPublicActivityList",
         "operationId": "getPublicActivityList",
         "parameters": [
@@ -1005,7 +1080,10 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ]
       }
     },
     "/activity/update": {
@@ -1017,8 +1095,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "UpdateActivity",
         "operationId": "updateActivity",
         "parameters": [
@@ -1132,7 +1210,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "activity"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/user/login": {
@@ -1144,8 +1230,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "Login",
         "operationId": "login",
         "parameters": [
@@ -1208,7 +1294,10 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "user"
+        ]
       }
     },
     "/user/me": {
@@ -1217,8 +1306,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "GetUserInfo",
         "operationId": "getUserInfo",
         "responses": {
@@ -1242,7 +1331,15 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "user"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
     "/user/register": {
@@ -1254,8 +1351,8 @@
           "application/json"
         ],
         "schemes": [
-    "http"
-  ],
+          "http"
+        ],
         "summary": "Register",
         "operationId": "register",
         "parameters": [
@@ -1303,7 +1400,10 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "user"
+        ]
       }
     }
   },
@@ -1311,5 +1411,23 @@
   "x-description": "This is a goctl generated swagger file.",
   "x-github": "https://github.com/zeromicro/go-zero",
   "x-go-zero-doc": "https://go-zero.dev/",
-  "x-goctl-version": "1.9.2"
+  "x-goctl-version": "1.9.2",
+  "tags": [
+    {
+      "name": "user",
+      "description": "User APIs"
+    },
+    {
+      "name": "activity",
+      "description": "Activity APIs"
+    }
+  ],
+  "securityDefinitions": {
+    "BearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header",
+      "description": "JWT Bearer token. Example: Authorization: Bearer <token>"
+    }
+  }
 }
